2022-04-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.8

	* inst/include/spdlog/*: New upstream release spdlog 1.10.0

2021-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.7

2021-11-20  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/water.css: Added css file

2021-11-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/introduction.md: Converted from Rmd to simplermarkdown
	* DESCRIPTION: Switched VignetteBuilder: to simplermarkdown

2021-08-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/spdlog/*: New upstream release spdlog 1.9.2

2021-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/spdlog/*: New upstream release spdlog 1.9.1

2021-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.6

	* inst/include/spdlog/*: New upstream spdlog 1.9.0 (with fmt 8.x)

2021-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/: Moved mkdocs-material input

2021-03-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.5

2021-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/spdlog/*: New upstream release spdlog 1.8.4 + 1.8.5

2021-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description): Mention Gabi explicitly
	(URL): List GitHub repo and package pages
	(BugReports): List GitHub issues pages

	* inst/include/spdlog/*: New upstream release spdlog 1.8.3

2020-12-25  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Small tweaks to CI YAML file

2020-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.4

	* inst/include/spdlog/*: New upstream release spdlog 1.8.2

	* .github/workflows/ci.yaml: Add CI runner using r-ci

2020-10-23  Dirk Eddelbuettel  <edd@debian.org>
